--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Page Title</title>
+  <script src="myscripts.js"></script> 
 </head>
 <body>
   <script>
-    // Your JavaScript goes here!
-    console.log("Hello World");
     
   </script>
 </body>
